[FIX] web_editor: block background image border layer fix
This commit fixes issues with the border of blocks that have images as
background.
- If a block that has an image selected as background is given a
  border, its background image will fit awkwardly in the surrounding
  border.
- If a backround image for a block is positioned all the way to any
  edge, it does not cover all the block.

Steps to reproduce:

- Add a masonry block/big boxes block
- Add a background image to an element of the masonry/big boxes
- Add a big border
=> The background image overflows on the border randomly
- Make the border translucent if it isn't already
- Shift the background image all the way to the left/top
=> The image does not cover all the border/box 

After the change the image background completely covers its
block, even when resized or when a border is applied.

task-4174638

Part-of: odoo/odoo#201200

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -906,6 +906,9 @@ section, .oe_img_bg, [data-oe-shape-data] {
     &.o_bg_img_center {
         background-position: center;
     }
+    &.o_bg_img_origin_border_box {
+        background-origin: border-box;
+    }
 }
 
 // Gradient
